<resources>
    <string name="app_name">My News</string>
    <string name="business_btn_title">Business</string>
    <string name="popular_btn_title">Popular</string>
    <string name="top_stories_btn_title">Top Stories</string>
    <string name="news_caption_placeholder">News Caption</string>
    <string name="date_placeholder">Date</string>
    <string name="news_title_placeholder">News Title</string>

    <!-- News Fragment Preference Titles -->
    <string name="top_fragment">Top Stories</string>
    <string name="pop_fragment">Popular News</string>
    <string name="bus_fragment">Business Stories</string>
    <string name="art_fragment">Art Stories</string>
    <string name="sci_fragment">Science Stories</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="notifications">Notifications</string>
    <string name="notification_toggle_text">Enable Notifications (once per day)</string>
    <string name="about_title">About My News</string>
    <string name="about_content">My News is an Open Classrooms Application designed to demonstrate skill development in the areas of Api Calls, Retrofit, Recycler Views and Coroutines</string>
    <string name="help_title">Help Desk</string>
    <string name="help_content">Being a learning app, the best forms of help will come from the official documentation, linked in this text</string>
    <string name="arts_checkbox_txt">Arts</string>
    <string name="business_checkbox_txt">Business</string>
    <string name="entreprenuers_checkbox_txt">Entreprenuers</string>
    <string name="politics_checkbox_txt">Politics</string>
    <string name="sports_checkbox_txt">Sports</string>
    <string name="travel_checkbox_txt">Travel</string>
    <string name="search_query_et">Search query term</string>
    <string name="begin_date_title">Begin Date</string>
    <string name="end_date_title">End Date</string>
    <string name="search_btn">Search</string>
<string name="android_developers_link">https://developer.android.com/</string>
    <string name="open_classrooms_link">https://openclassrooms.com/en/paths</string>
    <string name="home_btn">Home</string>
    <string name="no_news">There is no new news in this category</string>
    <string name="error_loading_news">Error loading news</string>
    <string name="main_news_tag">MAIN_NEWS_TAG</string>
</resources>